--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "renbook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ariqrm/rentbook.git"
+    "url": "git+https://github.com/ariqrm/rentbook"
   },
   "author": "",
   "license": "ISC",
