--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "standard": "^13.1.0"
   }
 }
