--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 SERVER_PORT = 3010
 
-DB_HOST = 'https://remotemysql.com'
-DB_USER = 'TQcD990PhV'
-DB_PASSWORD = 'tFU1324eFE'
-DB_NAME = 'TQcD990PhV'
+DB_HOST = 'localhost'
+DB_USER = 'pmauser'
+DB_PASSWORD = '1'
+DB_NAME = 'RentBook'
 
 SECRET_KEY = 'secretkey'
