--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ DB_PASSWORD = '1'
 DB_NAME = 'RentBook'
 
 SECRET_KEY = 'secretkey'
+
+CLOUDINARY_CLOUD_NAME= 'dmdlthft0'
+CLOUDINARY_API_KEY= '477924986181444'
+CLOUDINARY_API_SECRET= 'Btv2yg_SRCBixd9lnOeLKUHGTDM'
