--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "rundev": "nodemon app.js"
   },
   "repository": {
@@ -21,12 +21,16 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "standard": "^13.1.0"
